--- a/Translate_model.ipynb
+++ b/Translate_model.ipynb
@@ -327,11 +327,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'trông tại anh ta'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "res = translate_model.Translate('darling, just hold my hand', alpha=0.4, n_gram_intensity=2, rearrange=True)"
+    "translate_model.Translate('look at him', alpha=0.4, n_gram_intensity=2, rearrange=False).text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cô ấy ai như'"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate_model.Translate('who she like', alpha=0.4, n_gram_intensity=2, rearrange=True).text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bạn làm ghét anh ta'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate_model.Translate( 'do you hate him?', alpha=0.4, n_gram_intensity=2, rearrange=True).text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'họ làm không phải biết'"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate_model.Translate( 'they do not know', alpha=0.4, n_gram_intensity=2, rearrange=True).text"
    ]
   },
   {
